--- a/view/catalog.html
+++ b/view/catalog.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<title>QC文学网-目录页</title>
 		<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-		<link rel="stylesheet" href="../css/catalog_cc377679e2.css" />
+		<link rel="stylesheet" href="../css/catalog_f21940f599.css" />
     <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
 		<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
 		<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
@@ -228,6 +228,7 @@
    
 
 <div class="Report" v-if="report" >
+   <img src="../img/false.png" @click="rewardShowTowFn"/>
     <form action="" method="get">请输入举报理由
     <br /><br /> 
     <ul>
@@ -438,7 +439,7 @@
 <link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/wangEditor.min.js"></script>
-<script src="../js/main/catalog_a870460d30.js"></script>
+<script src="../js/main/catalog_d1cbed62ff.js"></script>
 <script type="text/javascript" id="bdshare_js" data="type=tools&mini=1" ></script> 
 <script type="text/javascript" id="bdshell_js"></script>
 <script type="text/javascript">
@@ -448,7 +449,6 @@
   var bds_config = {'bdDesc':'QC轻创轻小说_小说目录页'};
   document.getElementById('bdshell_js').src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000);
 </script>
-<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"16"},"share":{"bdSize":16},"image":{"viewList":["qzone","tsina","weixin","sqq"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","weixin","sqq"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
 </body>
 </html>
 
