--- a/css/catalog_f21940f599.css
+++ b/css/catalog_f21940f599.css
@@ -220,7 +220,8 @@
 .reward_ture{width:330px;margin:0 auto;color:#fff;background-color:#00a1d6;font-family:inherit;height:32px;text-align:center;line-height:32px;cursor:pointer;font-size:15px;border-radius:6px}
 .reward_ture:hover{background-color:#38C0EC;transition:all .2s ease;-webkit-transition:all .2s ease}
 .Report{width:220px;height:240px;background-color:#fff;box-shadow:0 3px 5px 2px rgba(0,0,0,.3);border-radius:6px;position:fixed;left:45%;top:45%;z-index:9999999}
-.Report form{width:220px;height:180px;padding-top:20px;font-weight:600;padding-left:20px}
+.Report form{width:220px;height:180px;padding-top:20px;font-weight:600;padding-left:20px;cursor:pointer}
+.Report img{position:absolute;right:5px;top:5px;width:20px;height:20px}
 .Report form label{font-weight:100;cursor:pointer}
 .Report ul{width:220px;height:150px;float:left}
 .Report ul li{width:110px;float:right;margin-top:15px}
