--- a/css/catalog_10be6d1c4c.css
+++ b/css/catalog_10be6d1c4c.css
@@ -3,10 +3,14 @@
 .index .index_Line{height:36px;border-bottom:1px solid #cdcdcd}
 .index .screen{width:321px;min-height:1000px;position:absolute;top:50px;left:802px;background-color:rgba(0,0,0,.008)}
 .index .picture{width:194px;height:271px;position:absolute;top:30px;left:15px;margin-top:20px;border-radius:4px}
+.index .update{width:30px;height:21px;border-radius:4px 0 12px 0;position:absolute;top:50px;left:15px;background-color:#ffd800}
+.index .update img{position:absolute;top:0;left:4px;width:20px;height:20px}
+.index .update_tow{width:30px;height:21px;border-radius:4px 0 12px 0;position:absolute;top:50px;left:15px;background-color:#d0d8e1}
+.index .update_tow img{position:absolute;top:0;left:4px;width:20px;height:20px}
 .text{width:565px;height:260px;margin:20px 0 0 230px}
 .text h4{font-size:20px;font-family:"幼圆"}
 .text .text_ul{width:565px;height:20px;font-size:13px;line-height:20px;margin-top:25px}
-.text .text_ul li{width:130px;height:auto;float:left}
+.text .text_ul li{width:100px;height:auto;float:left}
 .screen h2{width:300px;height:19px;padding:47px 0 0 20px}
 .screen .author{width:217px;height:72px;margin:-80px 0 0 110px}
 .screen .author li{width:184px;padding-top:20px}
