--- a/view/catalog.html
+++ b/view/catalog.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<title>QC文学网-目录页</title>
 		<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-		<link rel="stylesheet" href="../css/catalog_f21940f599.css" />
+		<link rel="stylesheet" href="../css/catalog_10be6d1c4c.css" />
     <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
 		<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
 		<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
@@ -19,12 +19,16 @@
 		<div id="search"></div>  
 		<div class="index" >  
 			<div class="index_Line"></div>
+			
 			<img v-for="obj in bookCustom" id="{{obj.bookCoverImage}}"  class="picture" src="../img/z-imgBj.jpg" @load="szxj.loadImg(obj.bookCoverImage ? path.rootPath + obj.bookCoverImage: '', $event)" />
+			<div v-if="bookIsSign == 1" class="update"><img src="../img/yellowking.png" alt="" /></div>
+			<!--<div class="update_tow"><img src="../img/yellowking01.png" alt="" /></div>-->
 			<div class="text">
 			  <h4>{{ title }}</h4>   
 				<ul class="text_ul">
 					<li>字数: <span style="color:#7e7e7e">&nbsp {{words}}</span></li>
 					<li>点击: <span style="color:#7e7e7e">&nbsp {{cursor}}</span></li>
+					<li style="width: 150px">更新状态: <span v-if=" updateCycle == 1 " style="color:#7e7e7e">&nbsp 日更</span><span v-else style="color:#7e7e7e">&nbsp 月更</span></li>
 					<li style="width: 200px">更新: <span style="color:#7e7e7e;">&nbsp{{szxj.getLocalTime(update / 1000) }}</span></li>
 				</ul>
 				<div class="text_brief">
@@ -439,7 +443,7 @@
 <link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/wangEditor.min.js"></script>
-<script src="../js/main/catalog_d1cbed62ff.js"></script>
+<script src="../js/main/catalog_6e742ad6d5.js"></script>
 <script type="text/javascript" id="bdshare_js" data="type=tools&mini=1" ></script> 
 <script type="text/javascript" id="bdshell_js"></script>
 <script type="text/javascript">
