--- a/view/catalog.html
+++ b/view/catalog.html
@@ -4,11 +4,11 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="UTF-8" />
 		<title>QC文学网-目录页</title>
-		<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-		<link rel="stylesheet" href="../css/catalog_10be6d1c4c.css" />
-    <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-		<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
-		<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
+		<link rel="stylesheet" href="../css/main.css" />
+		<link rel="stylesheet" href="../css/catalog.css" />
+    <link rel="stylesheet" href="../css/headerOrFooter.css" />
+		<link rel="stylesheet" href="../css/LOgin.css" />
+		<link rel="stylesheet" href="../css/jquery-ui.min.css" />
 	</head>  
 	<body id="mask" id="app"
 	  v-show="bodyFlag" style="display: none;"    
@@ -284,9 +284,9 @@
 			<a @click="setAttention()" v-if="!attention" class="a_author" href="javascript:;">关注</a>
 			<a @click="setAttention()" v-else class="a_author_Tow" href="javascript:;" >已关注</a>
 		</li>
-		<li><p class="span_autograph" title="{{autograph}}"><label style="color: black;">签名：</label>{{autograph}}</p></li>
-	</ul>
-	
+		
+		<li v-if=" autograph == '' "><p class="span_autograph" title="{{autograph}}"><label style="color: black;">签名：</label>好任性，签名一个字也不写</p></li>	</ul> 
+	  <li v-else><p class="span_autograph" title="{{autograph}}"><label style="color: black;">签名：</label>{{autograph}}</p></li>
 	<div class="works">
 		<h3 class="titile_tow">其他作品</h3>
 		<div class="button">
@@ -440,10 +440,10 @@
 </div>
 
 <myfooter></myfooter>
-<link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
+<link rel="stylesheet" href="../css/wangEditor.min.css" />
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/wangEditor.min.js"></script>
-<script src="../js/main/catalog_6e742ad6d5.js"></script>
+<script src="../js/main/catalog.js"></script>
 <script type="text/javascript" id="bdshare_js" data="type=tools&mini=1" ></script> 
 <script type="text/javascript" id="bdshell_js"></script>
 <script type="text/javascript">
