--- a/view/register.html
+++ b/view/register.html
@@ -5,10 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>QC文学网--注册页</title>
 	</head>
-	<link rel="stylesheet" href="../css/headerOrFooter.css" />
-	<link rel="stylesheet" href="../css/main.css" />
-	<link rel="stylesheet" href="../css/register.css" />
-	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
+	<link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
+	<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
+	<link rel="stylesheet" href="../css/register_38423b425e.css" />
+	<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	<body id="app">
 	<alert v-ref:vue-alert></alert>
 	<myheader></myheader>
@@ -59,7 +59,7 @@
 <script type="text/javascript" src="../lib/jquery-ui.min.js" ></script>
 <script type="text/javascript" src="../lib/jquery.validate.js"></script>
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
-<script src="../js/main/register.js"></script>
+<script src="../js/main/register_d7334674e1.js"></script>
 <script>
 
 	
