--- a/css/catalog_dabf7ddc5e.css
+++ b/css/catalog_dabf7ddc5e.css
@@ -4,9 +4,9 @@
 .index .screen{width:321px;min-height:1000px;position:absolute;top:50px;left:802px;background-color:rgba(0,0,0,.008)}
 .index .picture{width:194px;height:271px;position:absolute;top:30px;left:15px;margin-top:20px;border-radius:4px}
 .index .update{width:30px;height:21px;border-radius:4px 0 12px 0;position:absolute;top:50px;left:15px;background-color:#ffd800}
-.index .update img{position:absolute;top:0;left:4px;width:20px;height:20px}
+.index .update img{position:absolute;top:2px;left:5px;width:16px;height:16px}
 .index .update_tow{width:30px;height:21px;border-radius:4px 0 12px 0;position:absolute;top:50px;left:15px;background-color:#d0d8e1}
-.index .update_tow img{position:absolute;top:0;left:4px;width:20px;height:20px}
+.index .update_tow img{position:absolute;top:2px;left:5px;width:16px;height:16px}
 .text{width:565px;height:260px;margin:20px 0 0 230px}
 .text h4{font-size:20px;font-family:"幼圆"}
 .text .text_ul{width:565px;height:20px;font-size:13px;line-height:20px;margin-top:25px}
@@ -83,7 +83,7 @@
 .index .text_type{width:472px;padding:15px 0 0 0}
 .index .text_type ul{height:20px}
 .index .text_type ul li{width:60px;height:20px;line-height:17px;float:left}
-.index .text_type .text_span{width:48px;height:20px;display:inline-block;text-align:center;border-radius:6px;color:#00A1D6;border:1px solid #00A1D6}
+.index .text_type .text_span{width:48px;height:20px;display:inline-block;text-align:center;border-radius:16px;color:#00A1D6;border:1px solid #00A1D6}
 .index .text_type .text_span:hover{background-color:#68c9ff;border:1px solid #68c9ff;cursor:pointer;color:#fff;transition:all .2s ease;-webkit-transition:all .2s ease}
 .index .text_reading{width:560px;height:55px;padding:15px 0 0 0;cursor:pointer}
 .index .text_reading ul{height:40px}
