--- a/view/catalog.html
+++ b/view/catalog.html
@@ -4,11 +4,11 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="UTF-8" />
 		<title>QC文学网-目录页</title>
-		<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-		<link rel="stylesheet" href="../css/catalog_dabf7ddc5e.css" />
-    <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-		<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
-		<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
+		<link rel="stylesheet" href="../css/main.css" />
+		<link rel="stylesheet" href="../css/catalog.css" />
+    <link rel="stylesheet" href="../css/headerOrFooter.css" />
+		<link rel="stylesheet" href="../css/LOgin.css" />
+		<link rel="stylesheet" href="../css/jquery-ui.min.css" />
 	</head>  
 	<body id="mask" id="app"
 	  v-show="bodyFlag" style="display: none;"    
@@ -21,7 +21,7 @@
 			<div class="index_Line"></div>
 			
 			<img v-for="obj in bookCustom" id="{{obj.bookCoverImage}}"  class="picture" src="../img/z-imgBj.jpg" @load="szxj.loadImg(obj.bookCoverImage ? path.rootPath + obj.bookCoverImage: '', $event)" />
-			<div v-if="bookIsSign==1" class="update"><img src="../img/yellowking_02.png" alt="" /></div>
+			<div v-if="bookIsSign==1"  class="update"><img  src="../img/sign01_03.png" alt="" /></div>
 			<!--<div class="update_tow"><img src="../img/yellowking01.png" alt="" /></div>-->
 			<div class="text">
 			  <h4>{{ title }}</h4>   
@@ -288,7 +288,7 @@
 			<a @click="setAttention()" v-else class="a_author_Tow" href="javascript:;" >已关注</a>
 		</li>
 		
-		<li v-if=" autograph == '' "><p class="span_autograph" title="{{autograph}}"><label style="color: black;">签名：</label>这个作者好任性，并没有签名</p></li>	
+		<li v-if=" autograph == null "><p class="span_autograph" title="{{autograph}}"><label style="color: black;">签名：</label>这个作者好任性，并没有签名</p></li>	
 	  <li v-else><p class="span_autograph" title="{{autograph}}"><label style="color: black;">签名：</label>{{autograph}}</p></li>
 	</ul> 
 	  
@@ -445,10 +445,10 @@
 </div>
 
 <myfooter></myfooter>
-<link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
+<link rel="stylesheet" href="../css/wangEditor.min.css" />
 <script src="../lib/jquery.min.js"></script>
 <script src="../lib/wangEditor.min.js"></script>
-<script src="../js/main/catalog_6e742ad6d5.js"></script>
+<script src="../js/main/catalog.js"></script>
 <script type="text/javascript" id="bdshare_js" data="type=tools&mini=1" ></script> 
 <script type="text/javascript" id="bdshell_js"></script>
 <script type="text/javascript">
