--- a/view/class.html
+++ b/view/class.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>QC文学网-分类页</title>
-    <link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-    <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-		<link rel="stylesheet" href="../css/main_ddfaca9e09.css" />
-		<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
-		<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/headerOrFooter.css" />
+		<link rel="stylesheet" href="../css/main.css" />
+		<link rel="stylesheet" href="../css/LOgin.css" />
+		<link rel="stylesheet" href="../css/jquery-ui.min.css" />
   </head>
 <body class="class-body" id="app" v-show="bodyFlag" style="display: none;">
     <alert v-ref:vue-alert></alert>
@@ -55,11 +55,13 @@
       
       <ul id="transverse" v-if="hengshuId === 2" >
       	<li class="line active" v-for="obj in bookInfo" >
+      	  
           <img class="line-img pull-left" 
           	v-if="obj.bookCoverImage" 
-          	src="../img/z-imgBj.jpg" @load="szxj.loadImg(obj.bookCoverImage ? path.rootPath + obj.bookCoverImage: '', $event)"
-          	 @click="gotoBook(obj.bookId)">
+          	src="../img/z-imgBj.jpg" @load="szxj.loadImg(obj.bookCoverImage ? path.rootPath + obj.bookCoverImage: '', $event)"          	
+          	 @click="gotoBook(obj.bookId)">          	 
           <img @click="gotoBook(obj.bookId)" v-else class="line-img pull-left">
+          <span v-if="obj.bookIsSign == 1 " class="update"><img src="../img/sign01_03.png" alt="" /></span>
           <div class="pull-left line-content">
             <p class="p" title="{{ obj.bookName }}" @click="gotoBook(obj.bookId)">{{ obj.bookName }}&nbsp;</p>
             <div class="div">
@@ -85,7 +87,9 @@
         	<ul>
         		<li v-for="temp in obj">
         			<div class="vertical-img" @click="gotoBook(temp.bookId)">
+        			 
         				<img src="../img/z-imgBj.jpg" @load="szxj.loadImg(temp.bookCoverImage ? path.rootPath + temp.bookCoverImage: '', $event)"  class="cover" />
+        				<div v-if="temp.bookIsSign == 1 " class="update"><img src="../img/sign01_03.png" alt="" /></div>
         				<div class="vertical-img-line">
         					<img :src="path.rootPath + temp.userHeadImg " />
         					<div class="vertical-Author-name vertical-hover">{{temp.author}}</div>
@@ -117,6 +121,6 @@
     </div>
     
   <myfooter></myfooter>
-  <script src="../js/main/class_e29be8ae28.js"></script>		
+  <script src="../js/main/class.js"></script>		
 </body>
 </html>
