--- a/view/user_info.html
+++ b/view/user_info.html
@@ -6,11 +6,11 @@
   <title>QC文学网---个人中心</title> 
   <meta name="keywords" content="QC轻小说,原创轻小说,轻小说投稿">
   <meta name="description" content="QC原创轻小说，一个在二次元盛起的魔法圣殿，拥有魔幻与神奇色彩，为二次元提供轻小说投稿与画师约稿相结合的平台。加入我们，接受契约，用轻松奇幻的文字留下你心中的故事。 ">
-  <link rel="stylesheet" href="../css/main_ddfaca9e09.css" /> 
-  <link rel="stylesheet" href="../css/user_info_5d6261166b.css" /> 
-  <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-  <link rel="stylesheet" href="../css/Date_3e192c3277.css"  />
-  <link rel="stylesheet" href="../css/font-awesome.min_7517ab4286.css"  />
+  <link rel="stylesheet" href="../css/main.css" /> 
+  <link rel="stylesheet" href="../css/user_info.css" /> 
+  <link rel="stylesheet" href="../css/headerOrFooter.css" />
+  <link rel="stylesheet" href="../css/Date.css"  />
+  <link rel="stylesheet" href="../css/font-awesome.min.css"  />
  </head> 
  <body id="app" v-show="bodyFlag" style="display: none;">
   <alert v-ref:vue-alert></alert>
@@ -80,10 +80,10 @@
 
 </body>
 <script type="text/javascript" src="../lib/jquery.min.js" ></script>
-<link rel="stylesheet" href="../css/wangEditor.min_6c8738c0e8.css" />
+<link rel="stylesheet" href="../css/wangEditor.min.css" />
 <script type="text/javascript" src="../lib/wangEditor.min.js" ></script>
-<link rel="stylesheet" href="../css/cropper.min_7a1fe53434.css" />
+<link rel="stylesheet" href="../css/cropper.min.css" />
 <script type="text/javascript" src="../lib/cropper.min.js"></script>
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
-<script src="../js/main/user_info_db1e3d0320.js"></script>
+<script src="../js/main/user_info.js"></script>
 </html>
