--- a/view/Space.html
+++ b/view/Space.html
@@ -4,11 +4,11 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>  
 		<meta charset="UTF-8">
 		<title>个人空间</title>
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/catalog.css" />
-    <link rel="stylesheet" href="../css/headerOrFooter.css" />
-    <link rel="stylesheet" href="../css/LOgin.css" />
-    <link rel="stylesheet" href="../css/jquery-ui.min.css" />
+    <link rel="stylesheet" href="../css/main_0b70ba331b.css" />
+    <link rel="stylesheet" href="../css/catalog_ce13f4a02c.css" />
+    <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
+    <link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
+    <link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	</head>
 	<style>
     .body{
