--- a/view/ranking.html
+++ b/view/ranking.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 		<title>QC文学网-排行榜</title>
-  	<link rel="stylesheet" href="../css/ranking.css" />
-  	<link rel="stylesheet" href="../css/headerOrFooter.css" />
-  	<link rel="stylesheet" href="../css/main.css" />
-  	<link rel="stylesheet" href="../css/LOgin.css" />
-  	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
+  	<link rel="stylesheet" href="../css/ranking_a6f63cc4de.css" />
+  	<link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
+  	<link rel="stylesheet" href="../css/main_0b70ba331b.css" />
+  	<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
+  	<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	</head>
 	<body id="app" v-show="bodyFlag" style="display: none;">
 	  <alert v-ref:vue-alert></alert>
@@ -95,6 +95,6 @@
   </div>
 	<myfooter></myfooter>
 	</body>
-<script src="../js/main/ranking.js"></script>
+<script src="../js/main/ranking_5dc0daf229.js"></script>
 
 </html>
