--- a/view/login.html
+++ b/view/login.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>QC文学网-登入页</title>
 	<link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-	<link rel="stylesheet" href="../css/main_0b70ba331b.css" />
+	<link rel="stylesheet" href="../css/main_8e64e6fdaf.css" />
 	<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
 	<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	</head>
@@ -50,5 +50,5 @@
 <script type="text/javascript" src="../lib/jquery-ui.min.js" ></script>
 <script type="text/javascript" src="../lib/jquery.validate.js"></script>
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
-<script src="../js/main/login_72646c029b.js"></script>
+<script src="../js/main/login_1e13152dcd.js"></script>
 </html>
