--- a/view/ranking.html
+++ b/view/ranking.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 		<title>QC文学网-排行榜</title>
-  	<link rel="stylesheet" href="../css/ranking_a6f63cc4de.css" />
+  	<link rel="stylesheet" href="../css/ranking_db99d54670.css" />
   	<link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-  	<link rel="stylesheet" href="../css/main_0b70ba331b.css" />
+  	<link rel="stylesheet" href="../css/main_8e64e6fdaf.css" />
   	<link rel="stylesheet" href="../css/LOgin_45d62b96f8.css" />
   	<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	</head>
