--- a/view/register.html
+++ b/view/register.html
@@ -6,7 +6,7 @@
 		<title>QC文学网--注册页</title>
 	</head>
 	<link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-	<link rel="stylesheet" href="../css/main_0b70ba331b.css" />
+	<link rel="stylesheet" href="../css/main_8e64e6fdaf.css" />
 	<link rel="stylesheet" href="../css/register_38423b425e.css" />
 	<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	<body id="app">
