--- a/css/main_8e64e6fdaf.css
+++ b/css/main_8e64e6fdaf.css
@@ -1,4 +1,4 @@
-*{box-sizing:border-box;margin:0;padding:0;outline:0!important;font-family:"微软雅黑"}
+*{box-sizing:border-box;margin:0;padding:0;outline:0!important;font-family:"微软雅黑";-webkit-user-select:none}
 body,html{font-family:"微软雅黑";font-size:14px;line-height:1}
 li{list-style:none}
 a{text-decoration:none}
@@ -35,11 +35,13 @@ a{text-decoration:none}
 .class-btn-search:hover{background-color:#00a1d6}
 .class-btn-search-input{height:26px;width:178px;border:2px solid #c6c6c6;border-radius:5px;padding-left:15px}
 .class-search-img{position:absolute;display:block;width:15px;height:14px;background-image:url(../img/search.png);background-repeat:no-repeat;right:32px;top:6px}
-.class-content .line:hover{width:915px;margin:0 auto;height:190px;margin-top:30px;-webkit-box-shadow:0 2px 4px rgba(0,0,0,.3);box-shadow:0 2px 4px rgba(0,0,0,.3);transition:all .25s ease;-webkit-transition:all .25s ease;position:relative}
-.class-content .line{width:915px;margin:0 auto;height:190px;margin-top:30px;border-bottom:1px solid #D3D3D3}
+.class-content .line:hover{width:915px;margin:0 auto;height:190px;margin-top:30px;-webkit-box-shadow:0 2px 4px rgba(0,0,0,.3);box-shadow:0 2px 4px rgba(0,0,0,.3);transition:all .25s ease;-webkit-transition:all .25s ease}
+.class-content .line{width:915px;margin:0 auto;height:190px;margin-top:30px;border-bottom:1px solid #D3D3D3;position:relative}
 .class-content .line .line-img{margin:25px 20px 25px 30px;cursor:pointer;width:100px;height:140px;border-radius:4px;position:relative}
-.update{width:50px;height:42px;position:relative;top:25px;left:30px;display:block}
+.update{width:50px;height:42px;position:absolute;top:25px;left:30px}
 .update img{position:absolute!important;top:0!important;left:0!important;width:50px!important;height:42px!important;pointer-events:none;opacity:1}
+.update_Tow{width:50px;height:42px;position:absolute;top:0;left:0}
+.update_Tow img{position:absolute!important;top:0!important;left:0!important;width:50px!important;height:42px!important;pointer-events:none;opacity:1}
 .class-content .line .line-content{width:765px}
 .class-content .line .line-content label{margin-right:10px;float:left;display:block;color:#000}
 .class-content .line .line-content .span{overflow:hidden;display:block;float:left;margin-right:20px;width:150px;text-overflow:ellipsis;white-space:nowrap}
