--- a/css/user_info_f5bfd869b8.css
+++ b/css/user_info_f5bfd869b8.css
@@ -1,3 +1,4 @@
+body{-webkit-user-select:none}
 .user_info_topBJ{margin:0 auto;min-width:1200px;margin-top:-56px;width:100%;height:500px;background:url(../img/user_info_bj.jpg) no-repeat}
 .user_info{margin:0 auto;margin-top:-444px;width:1200px;min-height:954px}
 .user_info .user_info_left{height:100%;width:298px;float:left}
@@ -332,11 +333,11 @@
 .sign-Block .sign_sub .sign_btnTow{width:95px;height:26px;background-color:#DDD;border-radius:8px;margin-left:25px;font-size:12px;color:#fff;text-align:center;line-height:26px;margin-top:15px;display:inline-block;cursor:pointer;font-family:"华康少女文字W5(P)"}
 .sign-Block .sign_sub .sign_img{width:100px;height:25.5px;margin-top:10px;margin-left:210px}
 .TowHeadrs{margin-top:3px!important}
-.moneyRecharge{width:500px;height:350px;box-shadow:0 1px 8px rgba(0,0,0,.35);position:fixed;left:40%;top:30%;background-color:#fff;border-radius:8px}
+.moneyRecharge{width:500px;height:335px;box-shadow:0 1px 8px rgba(0,0,0,.35);position:fixed;left:40%;top:30%;background-color:#fff;border-radius:8px}
 .moneyRecharge_header{font-size:18px;margin:18px 0 20px 0;font-family:'幼圆';height:30px;border-bottom:1px solid #DEDEDE;line-height:20px;padding-left:15px}
 .moneyRecharge_name{margin-bottom:20px;margin-left:50px;font-family:'幼圆';font-size:15px}
 .moneyRecharge_name input{border-radius:8px;height:26px;width:180px;margin-left:15px;padding-left:15px}
-.moneyRecharge_number{width:500px;height:35px;border-bottom:1px solid #DEDEDE;border-top:1px solid #DEDEDE;font-family:'幼圆';padding-left:25px;line-height:35px}
+.moneyRecharge_number{width:500px;height:35px;border-bottom:1px solid #DEDEDE;border-top:1px solid #DEDEDE;margin-bottom:15px;font-family:'幼圆';padding-left:25px;line-height:35px}
 .moneyRecharge_number:hover{border-bottom:1px solid #00A1D6;border-top:1px solid #00A1D6}
 .moneyRecharge_number input{width:350px;padding-left:300px;border:none}
 .moneyRecharge_pay{width:500px;height:45px}
@@ -375,3 +376,6 @@
 .moneyRecharge_numberTow{margin-top:0!important;border-top:1px solid rgba(222,222,222,0);margin-bottom:15px}
 .moneyRecharge_numberTow input{width:323px!important;padding-left:273px!important}
 input::-webkit-inner-spin-button,input::-webkit-outer-spin-button{-webkit-appearance:none!important;margin:0}
+.totle_money{width:90%;border-top:1px solid #E1E1E1;height:35px;text-align:center;padding-left:85px;line-height:35px;margin:0 auto;color:#777}
+.totle_money li{float:left;height:35px;width:150px}
+.registration_div_spanTow{padding-left:48px!important;font-size:13px}
