--- a/view/read_book.html
+++ b/view/read_book.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>QC文学网-阅读页</title>
 	<link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
-	<link rel="stylesheet" href="../css/main_0b70ba331b.css" />
+	<link rel="stylesheet" href="../css/main_8e64e6fdaf.css" />
 	<link rel="stylesheet" href="../css/jquery-ui.min_619d8a3740.css" />
 	<link rel="stylesheet" href="../css/read_book_91211fc24f.css" />
 </head>
