--- a/view/user_info.html
+++ b/view/user_info.html
@@ -6,8 +6,8 @@
   <title>QC文学网---个人中心</title> 
   <meta name="keywords" content="QC轻小说,原创轻小说,轻小说投稿">
   <meta name="description" content="QC原创轻小说，一个在二次元盛起的魔法圣殿，拥有魔幻与神奇色彩，为二次元提供轻小说投稿与画师约稿相结合的平台。加入我们，接受契约，用轻松奇幻的文字留下你心中的故事。 ">
-  <link rel="stylesheet" href="../css/main_0b70ba331b.css" /> 
-  <link rel="stylesheet" href="../css/user_info_5d6261166b.css" /> 
+  <link rel="stylesheet" href="../css/main_8e64e6fdaf.css" /> 
+  <link rel="stylesheet" href="../css/user_info_f5bfd869b8.css" /> 
   <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
   <link rel="stylesheet" href="../css/Date_3e192c3277.css"  />
   <link rel="stylesheet" href="../css/font-awesome.min_7517ab4286.css"  />
@@ -85,5 +85,5 @@
 <link rel="stylesheet" href="../css/cropper.min_7a1fe53434.css" />
 <script type="text/javascript" src="../lib/cropper.min.js"></script>
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
-<script src="../js/main/user_info_fed14b6a31.js"></script>
+<script src="../js/main/user_info_8aef2714d0.js"></script>
 </html>
