--- a/view/welfare.html
+++ b/view/welfare.html
@@ -3,7 +3,7 @@
 <title>福利8</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" href="../css/main_0b70ba331b.css" />
+<link rel="stylesheet" href="../css/main_8e64e6fdaf.css" />
 <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
 <style>
   .welfare {
