--- a/view/login.html
+++ b/view/login.html
@@ -30,7 +30,7 @@
 				</p>
 				<p class="line">
 					<input type="checkbox"  class="Login_input"/>
-					<label @click="remeberFn">记住账号</label>
+					<label @click="remeberFn">记住登录状态</label>
 				</p>
 				<div id="popup-captcha"></div>
 				<a class="btn btn_submit a" id="btn-login">登入</a>
@@ -50,5 +50,5 @@
 <script type="text/javascript" src="../lib/jquery-ui.min.js" ></script>
 <script type="text/javascript" src="../lib/jquery.validate.js"></script>
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
-<script src="../js/main/login_1e13152dcd.js"></script>
+<script src="../js/main/login_cd774ab76c.js"></script>
 </html>
