--- a/view/user_info.html
+++ b/view/user_info.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="QC轻小说,原创轻小说,轻小说投稿">
   <meta name="description" content="QC原创轻小说，一个在二次元盛起的魔法圣殿，拥有魔幻与神奇色彩，为二次元提供轻小说投稿与画师约稿相结合的平台。加入我们，接受契约，用轻松奇幻的文字留下你心中的故事。 ">
   <link rel="stylesheet" href="../css/main_8e64e6fdaf.css" /> 
-  <link rel="stylesheet" href="../css/user_info_836acc6ce9.css" /> 
+  <link rel="stylesheet" href="../css/user_info_e95a8fd14b.css" /> 
   <link rel="stylesheet" href="../css/headerOrFooter_e47ccb1647.css" />
   <link rel="stylesheet" href="../css/Date_3e192c3277.css"  />
   <link rel="stylesheet" href="../css/font-awesome.min_7517ab4286.css"  />
@@ -53,7 +53,7 @@
       	</a>
       	
       <li @click="setShowFlagFn | debounce 100" :class="active === 'wallet'?'active':''">
-      	<a :href="path.TemprootPath + '/view/user_info.html#!/wallet'">
+      	<a :href="path.TemprootPath + '/view/user_info.html#!/bill'">
       	<i class="icon_personal_wallet"></i>我的钱包</li> 
       	</a>
       	
@@ -85,5 +85,5 @@
 <link rel="stylesheet" href="../css/cropper.min_7a1fe53434.css" />
 <script type="text/javascript" src="../lib/cropper.min.js"></script>
 <script src="http://static.geetest.com/static/tools/gt.js"></script>
-<script src="../js/main/user_info_efe5777014.js"></script>
+<script src="../js/main/user_info_3495838897.js"></script>
 </html>
